# trading-research-os

./: .env.example  .gitignore  README.md  pyproject.toml
audit/: audit_findings.json  audit_report.md  audit_scorecard.md  audit_summary.md  codex_fix_prompt.md  critical_issues.md  file_level_findings.md  improvement_plan.md  missing_features.md
audit_control_center/: audit_control_center_findings.json  audit_control_center_report.md  audit_control_center_scorecard.md  audit_control_center_summary.md  codex_fix_prompt_control_center.md  file_level_findings_control_center.md  remaining_control_center_issues.md  test_results_control_center.md
audit_final_product_pack/: audit_final_product_pack_findings.json  audit_final_product_pack_report.md  audit_final_product_pack_scorecard.md  audit_final_product_pack_summary.md  file_level_findings_final_product_pack.md  remaining_final_product_pack_issues.md  test_results_final_product_pack.md
audit_lean_cli_compatibility_patch/: audit_lean_cli_patch_findings.json  audit_lean_cli_patch_report.md  audit_lean_cli_patch_scorecard.md  audit_lean_cli_patch_summary.md  codex_fix_prompt_lean_cli_patch.md  file_level_findings_lean_cli_patch.md  remaining_lean_cli_patch_issues.md  test_results_lean_cli_patch.md
audit_lean_integration/: audit_lean_findings.json  audit_lean_report.md  audit_lean_scorecard.md  audit_lean_summary.md  codex_fix_prompt_lean.md  file_level_findings_lean.md  remaining_lean_issues.md  test_results_lean.md
audit_local_ai_mode/: audit_local_ai_findings.json  audit_local_ai_report.md  audit_local_ai_summary.md  (+5 more)
(+298 files in other folders)
